platform/apps/lgtm-stack/network/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: lgtm-stack-gateway
  namespace: lgtm-stack
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - lgtm.ayame.asnk.io

    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: lgtm-tls
      hosts:
        - lgtm.ayame.asnk.io
